--- a/views/blog.pug
+++ b/views/blog.pug
@@ -5,8 +5,8 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Wanderlust Chronicles - New Blog Post
     link(rel="stylesheet", href="/css/blog.css")
+    link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css")
     link(href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap", rel="stylesheet")
-
   body
     .container
       h1.form-title Create a New Blog Post
@@ -26,5 +26,4 @@ html(lang="en")
         .form-group
           label(for="content") Content:
           textarea(id="content", name="content", rows="10", placeholder="Write your blog post here...")
-
         button(type="submit") Publish Post
